--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,4 +33,5 @@ dependencies {
     compile 'com.squareup.retrofit2:converter-gson:2.0.2'
     implementation 'com.android.support:recyclerview-v7:26.1.0'
     compile 'com.squareup.picasso:picasso:2.5.0'
+    implementation 'com.android.support:cardview-v7:26.1.0'
 }
